--- a/src/pages/admin-user-user/admin-user-user.scss
+++ b/src/pages/admin-user-user/admin-user-user.scss
@@ -23,6 +23,9 @@ page-admin-user-user {
     .p {
         color: black;
     }
+    .p-a {
+        color: #FD9530;
+    }
     .border {
         border-radius: 60px;
         border: 5px;
