--- a/src/pages/detalle-cupon/detalle-cupon.scss
+++ b/src/pages/detalle-cupon/detalle-cupon.scss
@@ -1,57 +1,81 @@
 page-detalle-cupon {
-  // ion-list .item {
-  //     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2f3640+1,000000+100&0.65+0,0.5+100 */
-  //     background: -moz-linear-gradient(top, rgba(47, 54, 64, 0.65) 0%, rgba(47, 54, 64, 0.65) 1%, rgba(0, 0, 0, 0.5) 100%);
-  //     /* FF3.6-15 */
-  //     background: -webkit-linear-gradient(top, rgba(47, 54, 64, 0.65) 0%, rgba(47, 54, 64, 0.65) 1%, rgba(0, 0, 0, 0.5) 100%);
-  //     /* Chrome10-25,Safari5.1-6 */
-  //     background: linear-gradient(to bottom, rgba(47, 54, 64, 0.65) 0%, rgba(47, 54, 64, 0.65) 1%, rgba(0, 0, 0, 0.5) 100%);
-  //     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  //     // filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#a62f3640', endColorstr='#80000000', GradientType=0);
-  //     /* IE6-9 */
-  //     color: #EAB543;
-
-  // }
-  .marg {
-      margin-bottom: 1em;
-      text-align: right;
-  }
-  .card_atras {
-      margin-top: -1.8em;
-  }
-  .colorIcon{
-    color: #EAB543;
-  }
-  .borde{
-      border: 1px solid red;
-  }
-  
-  .AdminEvento {
-    color: #fff;
-}
-
-.sucursal {
-    color: #fff;
-    opacity: 0.8;
-  
-}
-.toolbar-background {
-    background-image: url('../assets/imgs/proriat.png')!important;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
-.borde{
-    margin-top: 0%;
-    border-bottom: #e49602 1px solid;
-    //color: #e49602;
-  }
-  .infocup{
- 
- margin-left:25%;
- position: absolute;
- margin-top: -78px;
-   
-  }
- 
+    // ion-list .item {
+    //     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2f3640+1,000000+100&0.65+0,0.5+100 */
+    //     background: -moz-linear-gradient(top, rgba(47, 54, 64, 0.65) 0%, rgba(47, 54, 64, 0.65) 1%, rgba(0, 0, 0, 0.5) 100%);
+    //     /* FF3.6-15 */
+    //     background: -webkit-linear-gradient(top, rgba(47, 54, 64, 0.65) 0%, rgba(47, 54, 64, 0.65) 1%, rgba(0, 0, 0, 0.5) 100%);
+    //     /* Chrome10-25,Safari5.1-6 */
+    //     background: linear-gradient(to bottom, rgba(47, 54, 64, 0.65) 0%, rgba(47, 54, 64, 0.65) 1%, rgba(0, 0, 0, 0.5) 100%);
+    //     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    //     // filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#a62f3640', endColorstr='#80000000', GradientType=0);
+    //     /* IE6-9 */
+    //     color: #EAB543;
+    // }
+    .marg {
+        margin-bottom: 1em;
+        text-align: right;
+    }
+    .card_atras {
+        margin-top: -1.8em;
+    }
+    .colorIcon {
+        color: #EAB543;
+    }
+    .borde {
+        border: 1px solid red;
+    }
+    .AdminEvento {
+        color: #fff;
+    }
+    .sucursal {
+        color: #fff;
+        opacity: 0.8;
+    }
+    .toolbar-background {
+        background-image: url('../assets/imgs/proriat.png')!important;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+    .borde {
+        margin-top: 0%;
+        border-bottom: #e49602 1px solid;
+        //color: #e49602;
+    }
+    .padre {
+        position: relative;
+    }
+    .infocup {
+        margin-left: 37%;
+        margin-right: 30%;
+        text-align: center;
+        position: absolute;
+        z-index: 1;
+    }
+    .imagen {
+        margin-top: 10%;
+        width: 100%;
+    }
+    ion-card {
+        position: relative;
+        text-align: center;
+    }
+    .card-title {
+        position: absolute;
+        top: 36%;
+        font-size: 2.0em;
+        width: 100%;
+        font-weight: bold;
+        color: #fff;
+    }
+    .card-subtitle {
+        font-size: 1.0em;
+        position: absolute;
+        top: 20%;
+        width: 100%;
+        color: #343434;
+    }
+    img {
+        margin-top: 2% !important;
+    }
 }
