--- a/src/pages/administrar-reservaciones/administrar-reservaciones.scss
+++ b/src/pages/administrar-reservaciones/administrar-reservaciones.scss
@@ -26,6 +26,20 @@ page-administrar-reservaciones {
         opacity: 0.8;
       
     }
+    .button-ios{
+        background-color: #FD9530 !important;
+    }
+
+    .color1{
+        background: #fafafa !important;
+        color: #fafafa !important;
+        background-color: #fafafa !important;
+    }
+        .colorBlanco{
+            
+            color: #ffffff !important;
+    
+        }
     // .header {
     //     color: #ffffff;
     //     font-size: 2.5rem;
