--- a/src/pages/reserva-detalle/reserva-detalle.scss
+++ b/src/pages/reserva-detalle/reserva-detalle.scss
@@ -20,4 +20,9 @@ page-reserva-detalle {
         color: #fff;
     }
 
+    .color1{
+        background: #fafafa !important;
+        //color: #f5f5f5 !important;
+        background-color: #fafafa !important;
+    }
 }
