--- a/src/pages/admin-rp-codigo/admin-rp-codigo.scss
+++ b/src/pages/admin-rp-codigo/admin-rp-codigo.scss
@@ -115,4 +115,15 @@ page-admin-rp-codigo {
         color:rgba(0, 0, 0, 1);
     }
 
+    .descripcion {
+        background-color: #e6e5e3;
+        border-radius: 15px;
+        margin-top: -7%;
+        position: static;
+        width: 100%;
+    }
+    
+    .proximas {
+        margin-top: 1px;
+    }
 }
