--- a/src/pages/reserva-detalle/reserva-detalle.scss
+++ b/src/pages/reserva-detalle/reserva-detalle.scss
@@ -25,4 +25,13 @@ page-reserva-detalle {
         //color: #f5f5f5 !important;
         background-color: #fafafa !important;
     }
+
+    .imagen_perfil {
+        height: 15rem;
+        width: 15rem;
+        margin-top: 0px;
+        margin-bottom: -3px;
+        border-radius: 250px;
+    }
+    
 }
