--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
@@ -52,6 +52,7 @@ page-admin-monitear-reserv {
         opacity: 0.8;
         margin-top: -4%;
         text-transform: uppercase;
+        padding-top: 15px;
     }
 
     .cuadro {
@@ -61,7 +62,7 @@ page-admin-monitear-reserv {
         width: 70%;
         border-radius: 15px;
         text-align: center;
-        height: 30px;
+        height: 40px;
         text-transform: uppercase;
         position: static;
     }
@@ -100,7 +101,6 @@ page-admin-monitear-reserv {
 
     .btnDetalle {
         color: #fff;
-        height: 25px;
         background: #FD9530;
     }
 
@@ -109,7 +109,7 @@ page-admin-monitear-reserv {
     }
 
     .imgElli {
-        width: 40%;
+        width: 35%;
     }
 
     .status {
