gestion reservacion cambios

--- a/src/pages/administrar-reservaciones/administrar-reservaciones.scss
+++ b/src/pages/administrar-reservaciones/administrar-reservaciones.scss
@@ -152,4 +152,17 @@ page-administrar-reservaciones {
     #imgS {
         max-width: 90%;
     }
+
+    .btnDetalle {
+        color: #fff;
+        background: #FD9530;
+    }
+
+    .imagen_perfil {
+        height: 9rem;
+        width: 9rem;
+        margin-top: 0px;
+        margin-bottom: 10px;
+        border-radius: 250px;
+    }
 }
