Cambio de historial de reservaciones

--- a/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.scss
+++ b/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.scss
@@ -59,4 +59,18 @@ page-admin-historial-reservaciones {
         opacity: 0.8;
     }
 
+    .lugar {
+        color: #474646;
+        text-transform: uppercase;
+    }
+
+    
+    .descrip {
+        color: #474646;
+        opacity: 0.8;
+        margin-top: -4%;
+        text-transform: uppercase;
+        padding-top: 15px;
+    }
+
 }
