Update de compartidas en monitoreo

--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
@@ -109,7 +109,11 @@ page-admin-monitear-reserv {
     }
 
     .imgElli {
-        width: 35%;
+        width: 18%;
+    }
+
+    .imgElli2 {
+        width: 10%;
     }
 
     .status {
