Update vista qr

--- a/src/pages/admin-home/admin-home.scss
+++ b/src/pages/admin-home/admin-home.scss
@@ -333,7 +333,7 @@ page-admin-home {
 
     .buttonColor{
 
-        background-color: #FD9530;
+        background-color: #fcc04d;
         color: #fff;
     }
 
