Reservaciones canceladas terminado

--- a/src/pages/administrar-reservaciones/administrar-reservaciones.scss
+++ b/src/pages/administrar-reservaciones/administrar-reservaciones.scss
@@ -165,4 +165,10 @@ page-administrar-reservaciones {
         margin-bottom: 10px;
         border-radius: 250px;
     }
+    .aviso {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: bold;
+    }
 }
