--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.scss
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.scss
@@ -126,7 +126,7 @@ page-admin-reservacion-detalle {
   .imagen_perfil {
     height: 5rem;
     width: 5rem;
-    margin-top: 0px;
+    margin-top: 2rem;
     margin-bottom: -3px;
     border-radius: 250px;
 }
