--- a/src/pages/reserva-detalle/reserva-detalle.scss
+++ b/src/pages/reserva-detalle/reserva-detalle.scss
@@ -29,7 +29,7 @@ page-reserva-detalle {
     .imagen_perfil {
         height: 15rem;
         width: 15rem;
-        margin-top: 0px;
+        margin-top: 2rem;
         margin-bottom: -3px;
         border-radius: 250px;
     }
