--- a/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.scss
+++ b/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.scss
@@ -73,4 +73,14 @@ page-admin-historial-reservaciones {
         padding-top: 15px;
     }
 
+    .content {
+        overflow: scroll;
+        max-height: 100vh;
+        width: 100vw;
+        margin: auto;
+      }
+      .container{
+        height: 720px;
+      }
+
 }
