--- a/src/pages/administrar-reservaciones/administrar-reservaciones.scss
+++ b/src/pages/administrar-reservaciones/administrar-reservaciones.scss
@@ -171,4 +171,14 @@ page-administrar-reservaciones {
         font-size: 20px;
         font-weight: bold;
     }
+    .content {
+        overflow: scroll;
+        max-height: 100vh;
+        width: 100vw;
+        margin: auto;
+      }
+      .container{
+        padding-right: 7%;
+        height: 320px;
+      }
 }
