--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
@@ -123,4 +123,20 @@ page-admin-monitear-reserv {
     .aceptado {
         font-size: 10px;
     }
+
+    .aviso {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .content {
+        overflow: scroll;
+        max-height: 100vh;
+        width: 100vw;
+        margin: auto;
+      }
+      .container{
+        height: 920px;
+      }
 }
