--- a/src/pages/detalle-cupon/detalle-cupon.scss
+++ b/src/pages/detalle-cupon/detalle-cupon.scss
@@ -78,4 +78,9 @@ page-detalle-cupon {
     img {
         margin-top: 2% !important;
     }
+    .detalle {
+        color: #cecece;
+        margin-top: -8px;
+        text-transform: uppercase;
+    }
 }
