--- a/src/pages/agregar-cupones/agregar-cupones.scss
+++ b/src/pages/agregar-cupones/agregar-cupones.scss
@@ -67,28 +67,7 @@ color: #000;
 font-family: "TimesNewRoman" !important;
 text-transform: uppercase;
 }
-// .card_atras {
-    // background: -moz-linear-gradient(top, rgba(69, 72, 77, 1) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
-    /* FF3.6-15 */
-    // background: -webkit-linear-gradient(top, rgba(69, 72, 77, 1) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    // background: linear-gradient(to bottom, rgba(69, 72, 77, 1) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    // filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000', GradientType=0);
-    /* IE6-9 */
-// }
-ion-list .item {
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eccc68+80,fefcea+80&0.05+0,0.05+100 */
-    // background: -moz-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-    /* FF3.6-15 */
-    // background: -webkit-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    // background: linear-gradient(to bottom, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    //   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#0dfefcea', endColorstr='#0dfefcea', GradientType=0);
-    //   /* IE6-9 */
-    color: #ffffff;
-}
+
 .AdminEvento {
   color: #fff;
 }
@@ -119,12 +98,17 @@ ion-list .item {
   .blanco_1 {
       font-size: 18px;
       resize: none;
-      color: #FFFFFF;
+      color: #000;
   }
   .blanco_2 {
       font-size: 11px;
       resize: none;
-      color: #FFFFFF;
+      color: #000;
   }
+  .detalle {
+    color: #cecece;
+    margin-top: -8px;
+    text-transform: uppercase;
+}
 
 }
