--- a/src/pages/admin-sucursal-list/admin-sucursal-list.scss
+++ b/src/pages/admin-sucursal-list/admin-sucursal-list.scss
@@ -59,4 +59,9 @@ color:  #e49602;
     border-radius: 80px;
   
   }
+  .detalle {
+    color: #cecece;
+    margin-top: -8px;
+    text-transform: uppercase;
+}
 }
