--- a/src/pages/agregar-ciudad/agregar-ciudad.scss
+++ b/src/pages/agregar-ciudad/agregar-ciudad.scss
@@ -88,18 +88,6 @@ text-transform: uppercase;
     // filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000', GradientType=0);
     /* IE6-9 */
 }
-ion-list .item {
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eccc68+80,fefcea+80&0.05+0,0.05+100 */
-    background: -moz-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    //   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#0dfefcea', endColorstr='#0dfefcea', GradientType=0);
-    //   /* IE6-9 */
-    color: #ffffff;
-}
   ion-card {
     position: relative;
     text-align: center;
@@ -117,4 +105,9 @@ ion-list .item {
       resize: none;
       color: #FFFFFF;
   }
+  .detalle {
+    color: #cecece;
+    margin-top: -8px;
+    text-transform: uppercase;
+}
 }
