--- a/src/pages/corte-venta/corte-venta.scss
+++ b/src/pages/corte-venta/corte-venta.scss
@@ -95,6 +95,10 @@ page-corte-venta {
           border-bottom: #e49602 1px solid;
           //color: #e49602;
         }
-        
+        .detalle {
+          color: #cecece;
+          margin-top: -8px;
+          text-transform: uppercase;
+      }
       }
       
