--- a/src/pages/corte-venta/corte-venta.scss
+++ b/src/pages/corte-venta/corte-venta.scss
@@ -124,4 +124,13 @@ page-corte-venta {
     border-style: solid;
     border-color: #eccc68;
   }
+
+  .cantidadesStyle{
+
+    text-align: center;
+    font-size: 18px;
+  }
+  .textosCortes{
+    color: #000;
+  }
 }
