Guardado de corte

--- a/src/pages/corte-venta/corte-venta.scss
+++ b/src/pages/corte-venta/corte-venta.scss
@@ -133,4 +133,9 @@ page-corte-venta {
   .textosCortes{
     color: #000;
   }
+
+  .textosCortesPlus{
+    color: #e49602;
+    text-decoration-style: solid;
+  }
 }
