Inicio corte/historial

--- a/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.scss
+++ b/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.scss
@@ -1,3 +1,26 @@
 page-corte-reservaciones-historial {
 
+    .toolbar-background {
+        background-image: url('../assets/imgs/proriat.png') !important;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+      }
+
+      .detalle {
+        color: #cecece;
+        margin-top: -8px;
+        text-transform: uppercase;
+      }
+
+      .content {
+        overflow: scroll;
+        max-height: 100vh;
+        width: 100vw;
+        margin: auto;
+      }
+      .container{
+        height: 850px;
+      }
+
 }
