Muestra corte a sucursal

--- a/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.scss
+++ b/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.scss
@@ -21,6 +21,7 @@ page-corte-reservaciones-historial {
       }
       .container{
         height: 850px;
+        padding-right: 1em;
       }
 
 }
