--- a/src/pages/cuentas/cuentas.scss
+++ b/src/pages/cuentas/cuentas.scss
@@ -1,92 +1,132 @@
 page-cuentas {
-    ion-content{
-        // background-image: url('../assets/imgs/newFondo.png');
-        // background-repeat: no-repeat;
-        // background-size: cover;
-          //background-position: center;
-        width: 100%;
-        position: relative;
-        border: none;
-      }
-      .toolbar-background {
-        background-image: url('../assets/imgs/proriat.png')!important;
-        background-size: cover;
-        background-position: center center;
-        background-repeat: no-repeat;
-    }
-      .icon{
-        height: 25px;
-        width: 25px;
-      }
-        ion-icon{
-          color: #e49602;
-        }
-        .icon_img{
-          width: 30px;
-          height: 30px;
-          margin-left: 50%;
-        }
-        .card_atras{
-          background: -moz-linear-gradient(top, rgb(228, 150, 2) 0%, rgba(68,71,75,0.05) 2%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-          background: -webkit-linear-gradient(top, rgb(228, 150, 2) 0%,rgba(68,71,75,0.05) 2%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-          background: linear-gradient(to bottom, rgb(228, 150, 2) 0%,rgba(68,71,75,0.05) 2%,rgba(68,71,75,0.01) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-        }
-        
-        .blanco_1{
-          font-size: 25px;
-           resize: none;
-           color: #fff;
-        }
-        .blanco_2{
-          font-size: 15px;
-           resize: none;
-           color: #fff;
-        }
-        .card_title{
-          font-size: 15px;
-           resize: none;
-           color: #fff;
-           font: bold;
-           font-weight: 900;
-      
-           background: -moz-linear-gradient(top, rgba(69,72,77,1) 0%, rgba(68,71,75,0.05) 2%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-           background: -webkit-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(68,71,75,0.05) 2%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-           background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(68,71,75,0.05) 2%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-        }
-        ion-list .item {
-          /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eccc68+80,fefcea+80&0.05+0,0.05+100 */
-          background: -moz-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-          /* FF3.6-15 */
-          background: -webkit-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-          /* Chrome10-25,Safari5.1-6 */
-          background: linear-gradient(to bottom, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
-          /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-          //   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#0dfefcea', endColorstr='#0dfefcea', GradientType=0);
-          //   /* IE6-9 */
-          color: #ffffff;
-      }
-        .negro{
-          background: #2f3542;
-          color: #fff;
-        }
-        a{
-          color: #eccc68;
-        }
-        .borde{
-          margin-top: 0%;
-          border-bottom: #e49602 1px solid;
-          //color: #e49602;
-        }
-        .AdminEvento {
-          color: #fff;
-      }
-  
-      .sucursal {
-          color: #fff;
-          opacity: 0.8;
-        
-      }
-      }
-      
+  ion-content {
+    // background-image: url('../assets/imgs/newFondo.png');
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    //background-position: center;
+    width: 100%;
+    position: relative;
+    border: none;
+  }
+
+  .toolbar-background {
+    background-image: url('../assets/imgs/proriat.png') !important;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .icon {
+    height: 25px;
+    width: 25px;
+  }
+
+  ion-icon {
+    color: #e49602;
+  }
+
+  .icon_img {
+    width: 30px;
+    height: 30px;
+    margin-left: 50%;
+  }
+
+  .card_atras {
+    background: -moz-linear-gradient(top, rgb(228, 150, 2) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgb(228, 150, 2) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgb(228, 150, 2) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(68, 71, 75, 0.01) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#45484d', endColorstr='#000000', GradientType=0);
+    /* IE6-9 */
+  }
+
+  .blanco_1 {
+    font-size: 25px;
+    resize: none;
+    color: #000;
+  }
+
+  .blanco_2 {
+    font-size: 15px;
+    resize: none;
+    color: #000;
+  }
+
+  .card_title {
+    font-size: 15px;
+    resize: none;
+    color: #fff;
+    font: bold;
+    font-weight: 900;
+
+    background: -moz-linear-gradient(top, rgba(69, 72, 77, 1) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(69, 72, 77, 1) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(69, 72, 77, 1) 0%, rgba(68, 71, 75, 0.05) 2%, rgba(0, 0, 0, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#45484d', endColorstr='#000000', GradientType=0);
+    /* IE6-9 */
+  }
+
+  ion-list .item {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eccc68+80,fefcea+80&0.05+0,0.05+100 */
+    background: -moz-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(254, 252, 234, 0.05) 0%, rgba(254, 252, 234, 0.05) 80%, rgba(254, 252, 234, 0.05) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    //   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#0dfefcea', endColorstr='#0dfefcea', GradientType=0);
+    //   /* IE6-9 */
+    color: #ffffff;
+  }
+
+  .negro {
+    background: #2f3542;
+    color: #fff;
+  }
+
+  a {
+    color: #eccc68;
+  }
+
+  .borde {
+    margin-top: 0%;
+    border-bottom: #e49602 1px solid;
+    //color: #e49602;
+  }
+
+  .AdminEvento {
+    color: #fff;
+  }
+
+  .sucursal {
+    color: #fff;
+    opacity: 0.8;
+
+  }
+
+  .detalle {
+    color: #cecece;
+    margin-top: -8px;
+    text-transform: uppercase;
+  }
+
+  .cantidadesStyle {
+
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .textosCortes {
+    color: #000;
+  }
+
+  .textosCortesPlus {
+    color: #e49602;
+    text-decoration-style: solid;
+  }
+}
