--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.scss
@@ -139,4 +139,13 @@ page-admin-monitear-reserv {
       .container{
         height: 920px;
       }
+
+      .list-ios > .item-wrapper:last-child .item-block {
+        border-bottom: 0px;
+      }
+    
+      .list-ios {
+        margin: 0px;
+      }
+      
 }
