--- a/src/pages/master-reembolsos/master-reembolsos.scss
+++ b/src/pages/master-reembolsos/master-reembolsos.scss
@@ -35,4 +35,8 @@ page-master-reembolsos {
         height: 900px;
         margin-right: 2em;
     }
+
+    ion-icon{
+        font-size: 30px;
+    }
 }
